# drift

./: .dockerignore  .gitignore  ADAPTER_SPEC.md  Cargo.toml  LICENSE  README.md  demo-shell.sh  test-local.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release-drift-mosh.yml
bench/docker/: Dockerfile  README.md  docker-compose.yml  format_results.py  run.sh
benches/: throughput.rs
compose/: asymmetric.yml  chaos-link.yml  cross-arch.yml  directory.yml  extreme-loss.yml  five_node_mesh.yml  gen_ring_big.py  lossy-link.yml  memory-soak.yml  mesh-5hop.yml  mtu-probe.yml  multi-client-nat.yml  multi-http.yml  nat-dual-direct.yml  nat-keepalive.yml  nat-port-forward.yml  nat-single.yml  packet-capture.yml  peer_churn.yml  reconnect_cycle.yml  resumption.yml  ring-100.yml  ring-15.yml  ring-20.yml  satellite.yml  scale.yml  small-mtu.yml  tunnel-http.yml  tunnel-redis.yml  tunnel-ssh.yml  tunnel.yml  two-node.yml  unified-peers.yml
compose/multi-http-site/: index.html
docker/: Dockerfile
docker-scripts/: run-advanced.sh  run-all.sh  run-nat.sh
drift/: Cargo.toml
drift-bench/: Cargo.toml
drift-bench/src/: drift_proto.rs  main.rs  quic_proto.rs  report.rs  wg_proto.rs
drift-core/: Cargo.toml
drift-core/src/: crypto.rs  directory.rs  fec.rs  identity.rs  lib.rs  session.rs  time.rs
drift-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  drift.h
drift-ffi/examples/: Makefile  hello.c
drift-ffi/src/: lib.rs
drift-mosh/: Cargo.toml  README.md
drift-mosh/src/: client_key.rs  config.rs  known_hosts.rs  lib.rs  scrollback.rs  wire.rs
drift-mosh/tests/: reattach.exp  resize.exp  smoke.exp
drift-wasm/: .gitignore  Cargo.toml
drift-wasm-test/: README.md  package.json  test-mesh.mjs  test-wasm.mjs
drift-wasm/src/: lib.rs  peer_session.rs  session.rs  wire_webrtc.rs  wire_webtransport.rs  wire_ws.rs  ws_transport.rs
drift/benches/: comparative.rs  handshake.rs  throughput.rs
drift/examples/: bench_oneshot.rs  dir_client.rs  dir_server.rs  drift_chat.rs  drift_shell.rs  drift_tun.rs  lossy_proxy.rs  mesh_node.rs  resumption_client.rs  ring.rs  scale_client.rs  send.rs
drift/src/: crypto.rs  io.rs  lib.rs  main.rs  multipath.rs  short_header.rs  streams.rs
drift/src/cli/: identity.rs  info.rs  keygen.rs  listen.rs  mod.rs  relay.rs  send.rs
drift/src/transport/: batch.rs  cookies.rs  ecn.rs  mesh.rs  mod.rs  peer_shards.rs
drift/tests/: adversarial.rs  attack_beacon_poisoning.rs  attack_stream_open_flood.rs  attack_stream_recv_flood.rs  batch_send.rs  close_peer.rs  concurrency.rs  config.rs  congestion_control.rs  cookie_rotation_boundary.rs  datagram.rs  datagram_stream_coexistence.rs  dos_cookie.rs  ecn.rs  edge_cases.rs  extreme_conditions.rs  five_node_full_mesh.rs  kat_new_types.rs  long_soak.rs  lossy_network.rs  mesh_stress.rs  metric_accuracy.rs  migration.rs  mixed_udp_tcp.rs  path_probe_edges.rs  peer_churn.rs  pending_queue_cap.rs  performance_deep.rs  reconnect_cycle.rs  rekey.rs  resource_limits.rs  rtt_weighted_routing.rs  scale_handshakes.rs  security_deep.rs  seq_ceiling.rs  sharding_contention.rs  soak.rs  stream_fuzz.rs  stream_reliability.rs  tcp_transport.rs  (+4 more)
examples/: big_send.rs  churn_node.rs  dir_client.rs  dir_server.rs  drift_chat.rs  drift_kv.rs  drift_shell.rs  drift_tun.rs  medium_demo.rs  mesh.rs  mesh_node.rs  peer.rs  reconnect_node.rs  recv.rs  relay.rs  resumption_client.rs  resumption_server.rs  ring.rs  scale_client.rs  scale_server.rs  send.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: directory_decode.rs  header_decode.rs  stream_frame.rs
src/: crypto.rs  directory.rs  error.rs  fec.rs  header.rs  io.rs  lib.rs  multipath.rs  pq.rs  session.rs  short_header.rs  streams.rs
src/cli/: info.rs  keygen.rs  send.rs
src/transport/: batch.rs  cookies.rs  ecn.rs  mesh.rs  mod.rs  path.rs  peer_shards.rs  qlog.rs  resumption.rs  rtt.rs
tests/: adversarial.rs  attack_beacon_poisoning.rs  attack_cookie_nonce_replay.rs  attack_data_path_hijack.rs  attack_hello_replay_hijack.rs  attack_stream_open_flood.rs  attack_stream_recv_flood.rs  attack_surface_sweep.rs  batch_send.rs  bbr_stream.rs  beacon_skips_mesh_peers.rs  close_peer.rs  concurrency.rs  config.rs  congestion_control.rs  cross_interface.rs  datagram.rs  datagram_stream_coexistence.rs  directory_flood.rs  dos_cookie.rs  dual_init.rs  ecn.rs  edge_cases.rs  extreme_conditions.rs  four_medium_bridge.rs  graceful_migration.rs  graceful_migration_loss.rs  kat_new_types.rs  long_soak.rs  lossy_network.rs  mesh_stress.rs  metric_accuracy.rs  metrics.rs  migration.rs  mixed_udp_tcp.rs  path_probe_edges.rs  pending_queue_cap.rs  performance_deep.rs  qlog_events.rs  reconnect_cycle.rs  (+18 more)
