[package]
name = "drift-mosh"
version = "0.1.0"
edition = "2021"
description = "Mobile-shell replacement over DRIFT — survives network changes, identity-first, multi-medium"

[dependencies]
drift = { path = "../drift" }
tokio = { version = "1", features = ["full"] }
# Cross-platform PTY spawning: fork + exec + window-size
# handling for macOS, Linux, Windows without a per-OS branch.
portable-pty = "0.8"
# Raw-mode terminal: stdin capture, cursor + escape-sequence
# primitives on the client side.
crossterm = "0.28"
# SIGWINCH (and SIGINT / SIGTERM for clean shutdown).
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# XDG-style config resolution: ~/.config/drift-mosh/ on Linux,
# ~/Library/Application Support/drift-mosh/ on macOS,
# %APPDATA%\drift-mosh\ on Windows. One crate, consistent
# paths across platforms.
dirs = "5"
# TOML config file at config.toml — human-editable, same
# family as Cargo.toml / pyproject.toml.
toml = "0.8"
# Generating fresh client identities when the config dir is
# empty.
rand = "0.8"

[[bin]]
# The user-facing CLI: `drift-mosh user@host`.
name = "drift-mosh"
path = "src/bin/drift_mosh.rs"

[[bin]]
name = "drift-mosh-server"
path = "src/bin/server.rs"

[[bin]]
name = "drift-mosh-client"
path = "src/bin/client.rs"
